// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: Creating issues from Slack a channel with no subscriptions will show an error message 1`] = `
Object {
  "text": "This channel is not subscribed to any repositories",
}
`;

exports[`Integration: Creating issues from Slack repos which are not found are excluded from the list of repos to take action on 1`] = `
Object {
  "dialog": "{\\"callback_id\\":\\"create-issue-dialog\\",\\"title\\":\\"Open new issue\\",\\"submit_label\\":\\"Open\\",\\"elements\\":[{\\"type\\":\\"text\\",\\"label\\":\\"Title\\",\\"name\\":\\"title\\",\\"hint\\":\\"The issue will be opened on atom/atom\\"},{\\"type\\":\\"textarea\\",\\"label\\":\\"Write\\",\\"name\\":\\"body\\",\\"placeholder\\":\\"Leave a comment\\",\\"hint\\":\\"GitHub markdown syntax is supported, although you cannot preview it in Slack.\\"}]}",
  "token": "xoxa-token",
  "trigger_id": "13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: Creating issues from Slack repos which are not found are excluded from the list of repos to take action on 2`] = `""`;

exports[`Integration: Creating issues from Slack works in channel with multiple subscriptions 1`] = `
Object {
  "dialog": "{\\"callback_id\\":\\"create-issue-dialog\\",\\"title\\":\\"Open new issue\\",\\"submit_label\\":\\"Open\\",\\"elements\\":[{\\"label\\":\\"Repository\\",\\"type\\":\\"select\\",\\"name\\":\\"repository\\",\\"placeholder\\":\\"Select the repository on which to open the issue\\",\\"options\\":[{\\"label\\":\\"kubernetes/kubernetes\\"},{\\"label\\":\\"atom/atom\\"}]},{\\"type\\":\\"text\\",\\"label\\":\\"Title\\",\\"name\\":\\"title\\"},{\\"type\\":\\"textarea\\",\\"label\\":\\"Write\\",\\"name\\":\\"body\\",\\"placeholder\\":\\"Leave a comment\\",\\"hint\\":\\"GitHub markdown syntax is supported, although you cannot preview it in Slack.\\"}]}",
  "token": "xoxa-token",
  "trigger_id": "13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: Creating issues from Slack works in channel with multiple subscriptions 2`] = `""`;

exports[`Integration: Creating issues from Slack works in channel with multiple subscriptions 3`] = `Object {}`;

exports[`Integration: Creating issues from Slack works in channel with one subscription 1`] = `
Object {
  "dialog": "{\\"callback_id\\":\\"create-issue-dialog\\",\\"title\\":\\"Open new issue\\",\\"submit_label\\":\\"Open\\",\\"elements\\":[{\\"type\\":\\"text\\",\\"label\\":\\"Title\\",\\"name\\":\\"title\\",\\"hint\\":\\"The issue will be opened on kubernetes/kubernetes\\"},{\\"type\\":\\"textarea\\",\\"label\\":\\"Write\\",\\"name\\":\\"body\\",\\"placeholder\\":\\"Leave a comment\\",\\"hint\\":\\"GitHub markdown syntax is supported, although you cannot preview it in Slack.\\"}]}",
  "token": "xoxa-token",
  "trigger_id": "13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: Creating issues from Slack works in channel with one subscription 2`] = `""`;

exports[`Integration: Creating issues from Slack works in channel with one subscription 3`] = `Object {}`;
